# ifam

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_SUMMARY.md  Makefile  README.md  docker-compose.yml  generate_assets.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: 00-vision.md  10-architecture.md  20-security.md  30-governance.md  40-roadmap.md  50-onboarding.md  api-usage.md  mcp-integration.md
examples/: matlab_client.m  mcp_client.py  python_client.py  r_client.R  stata_client.do
examples/excel/: xlwings_client.py
src/ctl_api/: deps.py  main.py  models.py
src/ctl_cli/: __main__.py
src/ctl_core/: __init__.py  config.py  fame_syntax.py  registry.py
src/ctl_core/auth/: azure_ad.py
src/ctl_core/connectors/: azure_sql.py  base.py  databricks.py  local.py  mysql.py
src/ctl_core/transforms/: base.py  moving_average.py  normalize.py  seasonal_adjustment.py
src/ctl_mcp/: __init__.py  __main__.py  server.py
tests/: test_api.py  test_mcp.py
